--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-busboy": "^1.0.0",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.1",
     "multer": "^1.4.5-lts.1",
